made about page

--- a/about.html
+++ b/about.html
@@ -4,21 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Jason Anthony
-    </title>
+    <title>Jason Anthony</title>
 </head>
 <body>
+
     <div id="navbar">
         <navbar>
-            <div id="navbar-left">
-                <ul id="navlist">
-                    <li id="navlist-item"><a href = "homepage.html">Home</a></li>
-                    <li id="navlist-item"><a href = "about.html">About</a></li>
-                    <li id="navlist-item"><a href = "hobbies.html">Hobbies</a></li>
-                    <li id="navlist-item"><a href = "contact.html">Contact</a></li>
-                </ul>
-            </div>
+            <ul id="navlist">
+                <li id="navlist-item"><a href = "homepage.html">Home</a></li>
+                <li id="navlist-item"><a href = "about.html">About</a></li>
+                <li id="navlist-item"><a href = "hobbies.html">Hobbies</a></li>
+                <li id="navlist-item"><a href = "contact.html">Contact</a></li>
+            </ul>
         </navbar>
     </div>
+
+    <div id="main-container">
+        <!-- Personal Life Section -->
+        <section id="personal-life" class="life-section">
+            <h2>Personal Life</h2>
+            <p>
+                This section talks about Jason’s personal life, interests, and background. 
+                Explore his hobbies, values, and the things that shape him outside of work.
+            </p>
+        </section>
+
+        <!-- Professional Life Section -->
+        <section id="professional-life" class="life-section">
+            <h2>Professional Life</h2>
+            <p>
+                In this section, learn about Jason’s career as a software developer from Sri Lanka, 
+                specializing in backend development, his achievements, and ongoing projects.
+            </p>
+        </section>
+    </div>
+
 </body>
 </html>
