--- a/contact.html
+++ b/contact.html
@@ -4,29 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Jason Anthony
-    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Jason Anthony - Contact</title>
 </head>
 <body>
-    <div id="navbar">
-        <navbar>
-            <div id="navbar-left">
-                <ul id="navlist">
-                    <li id="navlist-item"><a href = "homepage.html">Home</a></li>
-                    <li id="navlist-item"><a href = "about.html">About</a></li>
-                    <li id="navlist-item"><a href = "hobbies.html">Hobbies</a></li>
-                    <li id="navlist-item"><a href = "contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div id="navbar-right">
-                <!-- <ul id="navlist">
-                    <li id="navlist-item"><a href = "homepage.html">Home</a></li>
-                    <li id="navlist-item"><a href = "about.html">About</a></li>
-                    <li id="navlist-item"><a href = "hobbies.html">Hobbies</a></li>
-                    <li id="navlist-item"><a href = "contact.html">Contact</a></li>
-                </ul> -->
-            </div>
-        </navbar>
-    </div>
+    <header class="main-header">
+        <nav class="navbar">
+            <ul class="navlist">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hero-text">
+            <h1>Contact Me</h1>
+            <p>Have a question or want to collaborate? Reach out to me below!</p>
+        </div>
+    </header>
+
+    <main>
+        <section class="contact-section">
+            <h2>Get In Touch</h2>
+            <form action="#" method="POST" class="contact-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit" class="cta-btn">Send Message</button>
+            </form>
+        </section>
+    </main>
+
 </body>
 </html>
