contact page fleshed out

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="hero-text">
             <h1>About Me</h1>
-            <p>Learn more about my journey, skills, and passion for development.</p>
+            <p>Learn more about my journey, skills, and passions!</p>
         </div>
     </header>
 
