--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="navlist">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Blogs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
             <div id="typed-text">
                 <h1>Welcome!</h1>
             </div>
-            <p>Backend Developer | Software Enthusiast | Problem Solver</p>
+            <p>Backend Developer | Tech Enthusiast | Problem Solver | Public Speaker</p>
             <a href="about.html" class="cta-btn">Learn More About Me</a>
         </div>
     </header>
@@ -35,7 +35,7 @@
                 <div class="intro-text">
                     <h2>About Me</h2>
                     <p>Hello! I'm Jason Anthony, a software developer from Sri Lanka specializing in backend development. I enjoy crafting efficient, scalable applications and solving complex problems.</p>
-                    <a href="projects.html" class="cta-btn">See My Projects</a>
+                    <a href="projects.html" class="cta-btn">Check Out My Thoughts</a>
                 </div>
                 <div class="intro-image">
                     <img src="Resources/pfp.jpeg" alt="Jason Anthony Photo" id="profile-photo">
@@ -45,11 +45,10 @@
     </main>
 
     <aside class="sidebar">
-        <h3>Connect with Me</h3>
-        <ul>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
+        <ul style="display: inline-flex;">
+            <li style="margin-left: 10px;"><a href="https://x.com/j4ybirrd" target="_blank"><img src="Resources/twitter.svg"></a></li>
+            <li style="margin-left: 10px;"><a href="https://www.linkedin.com/in/jason-anthony-b7a59325a/" target="_blank"><img src="Resources/linkedin.svg"></a></li>
+            <li style="margin-left: 10px;"><a href="https://github.com/Jason-Anth0ny" target="_blank"><img src="Resources/github.svg"></a></li>
         </ul>
     </aside>
 
