--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>Projects</h1>
-            <p>A showcase of my work, from personal projects to professional development.</p>
+            <h1>Blogs</h1>
+            <p>A showcase of blogs, both mine and others' that I find useful.</p>
         </div>
     </header>
 
@@ -28,21 +28,21 @@
           <div class="blogs jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Personal Blog Posts</h1>
-              <div class="blog-cards">
+              <div class="blog-cards container-fluid">
                 <div class="card" id="blog" style="width: 18rem;">
                   <img class="card-img-top" src="Resources/sand.webp" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Boundaries and Why They Are Important</h5>
                     <p class="card-text">Where to draw the line? And how to do it? Let’s find out.</p>
-                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" class="btn btn-primary">Read more...</a>
+                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" id="blog-button" class="btn btn-primary">Read more...</a>
                   </div>
                 </div>
                 <div class="card" id="blog" style="width: 18rem;">
-                  <img class="card-img-top" src="Resources/sand.webp" alt="Card image cap">
+                  <img class="card-img-top" src="Resources/focus.webp" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Boundaries and Why They Are Important</h5>
+                    <h5 class="card-title">7 Simple Tips to Improve Daily Focus</h5>
                     <p class="card-text">Where to draw the line? And how to do it? Let’s find out.</p>
-                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" class="btn btn-primary">Read more...</a>
+                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" id="blog-button" class="btn btn-primary">Read more...</a>
                   </div>
                 </div>
               </div>
@@ -52,13 +52,13 @@
           <div class="blogs jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">Recommended Blog Posts</h1>
-              <div class="blog-cards">
+              <div class="blog-cards container-fluid">
                 <div class="card" id="blog" style="width: 18rem;">
-                  <img class="card-img-top" src="Resources/sand.webp" alt="Card image cap">
+                  <img class="card-img-top" src="Resources/focus.webp" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Boundaries and Why They Are Important</h5>
-                    <p class="card-text">Where to draw the line? And how to do it? Let’s find out.</p>
-                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" class="btn btn-primary">Read more...</a>
+                    <h5 class="card-title">7 Simple Tips to Improve Daily Focus</h5>
+                    <p class="card-text">How to Achieve Your Full Potential — Every Day</p>
+                    <a href="https://medium.com/twosapp/7-simple-tips-to-improve-your-daily-focus-6300d93effc8" target="_blank" id="blog-button" class="btn btn-primary">Read more...</a>
                   </div>
                 </div>
                 <div class="card" id="blog" style="width: 18rem;">
@@ -66,7 +66,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Boundaries and Why They Are Important</h5>
                     <p class="card-text">Where to draw the line? And how to do it? Let’s find out.</p>
-                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" class="btn btn-primary">Read more...</a>
+                    <a href="https://medium.com/@sethsuna333/boundaries-and-why-they-are-important-477f062c0e40" target="_blank" id="blog-button" class="btn btn-primary">Read more...</a>
                   </div>
                 </div>
               </div>
