--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Jason Anthony - Contact</title>
+    <style>
+        body{
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <header class="main-header">
@@ -19,25 +24,30 @@
         </nav>
         <div class="hero-text">
             <h1>Contact Me</h1>
-            <p>Have a question or want to collaborate? Reach out to me below!</p>
+            <aside class="sidebar">
+                <ul style="display: inline-flex;">
+                    <li style="margin-left: 10px;"><a href="https://x.com/j4ybirrd" target="_blank"><img src="Resources/twitter.svg"></a></li>
+                    <li style="margin-left: 10px;"><a href="https://www.linkedin.com/in/jason-anthony-b7a59325a/" target="_blank"><img src="Resources/linkedin.svg"></a></li>
+                    <li style="margin-left: 10px;"><a href="https://github.com/Jason-Anth0ny" target="_blank"><img src="Resources/github.svg"></a></li>
+                </ul>
+                <ul style="display:flexbox;">
+                    <li>+94763041512</li>
+                    <li>jasonanthny7@gmail.com</li>
+                </ul>
+            </aside>
         </div>
     </header>
 
     <main>
         <section class="contact-section">
-            <h2>Get In Touch</h2>
-            <form action="#" method="POST" class="contact-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit" class="cta-btn">Send Message</button>
+           <div id="form-container">
+            <form autocomplete="off">
+                Name: <input type="text" id="name"></input> <br>
+                Email: <input type="email" id="email"><br>
+                Message: <textarea id="message"></textarea> <br>
+                <input type="submit" id="submit" class="cta-btn">
             </form>
+           </div>
         </section>
     </main>
 
